--- a/Deep_Neural_Network/Deep_Neural_Networks_MNIST.ipynb
+++ b/Deep_Neural_Network/Deep_Neural_Networks_MNIST.ipynb
@@ -1372,12 +1372,14 @@
         "val_running_loss_history = []\n",
         "val_running_corrects_history = []\n",
         "\n",
+        "# going through each epoch\n",
         "for e in range(epochs):\n",
         "    running_loss = 0\n",
         "    running_corrects = 0 \n",
         "    val_running_loss = 0\n",
         "    val_running_corrects = 0\n",
         "\n",
+        "    # going through each batch\n",
         "    for inputs, labels in training_loader:\n",
         "        inputs = inputs.view(inputs.shape[0], -1)\n",
         "        outputs = model(inputs)\n",
@@ -1386,12 +1388,18 @@
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
-        "\n",
+        "        \n",
+        "        # calculating the prediction by getting the max probability class\n",
         "        _, preds = torch.max(outputs, 1)\n",
+        "\n",
+        "        # adding the losses for the batches\n",
         "        running_loss += loss.item()\n",
+        "        # adding the accuracy for the batches\n",
         "        running_corrects += torch.sum(preds == labels.data)\n",
         "\n",
         "    else:\n",
+        "\n",
+        "        # calculating the same metrics as above for validation set\n",
         "        with torch.no_grad():\n",
         "            for val_inputs, val_labels in validation_loader:\n",
         "                val_inputs = val_inputs.view(val_inputs.shape[0], -1)\n",
@@ -1402,11 +1410,15 @@
         "                val_running_loss += val_loss.item()\n",
         "                val_running_corrects += torch.sum(val_preds == val_labels.data)\n",
         "\n",
+        "        # calculating the epoch loss\n",
         "        epoch_loss = running_loss / len(training_loader)\n",
+        "        # calculating the epoch accuracy\n",
         "        epoch_acc = running_corrects.float() / len(training_loader)\n",
+        "\n",
         "        running_loss_history.append(epoch_loss)\n",
         "        running_corrects_history.append(epoch_acc)\n",
         "\n",
+        "        # calculating epoch loss and accuracy for validation set\n",
         "        val_epoch_loss = val_running_loss / len(validation_loader)\n",
         "        val_epoch_acc = val_running_corrects / len(validation_loader)\n",
         "        val_running_loss_history.append(val_epoch_loss)\n",
