--- a/Convolutional_Neural_Network/CIFAR_10.ipynb
+++ b/Convolutional_Neural_Network/CIFAR_10.ipynb
@@ -178,11 +178,11 @@
         "    def __init__(self):\n",
         "        super().__init__()\n",
         "        # adding the first two dense layers\n",
-        "        self.conv1 = nn.Conv2d(3, 16, 3, 1, padding = True) # 1 is the channel, 20 filters, 5 is filter size, 1 is the stride\n",
+        "        self.conv1 = nn.Conv2d(3, 16, 3, 1, padding = True) # 3 are the channels, 16 filters, 3 is filter size, 1 is the stride\n",
         "        self.conv2 = nn.Conv2d(16, 32, 3, 1, padding = True)\n",
         "        self.conv3 = nn.Conv2d(32, 64, 3, 1, padding = True)\n",
         "        # defining the dense layers and dropout\n",
-        "        self.fc1 = nn.Linear(4*4*64, 500) # the input to dense is 4*4*50 as 4*4 would be output image shape from Conv layers.\n",
+        "        self.fc1 = nn.Linear(4*4*64, 500) # the input to dense is 4*4*64 as 4*4 would be output image shape from Conv layers.\n",
         "        self.dropout1 = nn.Dropout(0.5)\n",
         "        self.fc2 = nn.Linear(500, 10)\n",
         "\n",
