uncommented the res cell

--- a/Torch_Basics/Tensor_Tutorial.ipynb
+++ b/Torch_Basics/Tensor_Tutorial.ipynb
@@ -1132,9 +1132,9 @@
    "outputs": [],
    "source": [
     "# set default plots\n",
-    "# from res.plot_lib import set_default\n",
+    "from res.plot_lib import set_default\n",
     "import matplotlib.pyplot as plt\n",
-    "# set_default()"
+    "set_default()"
    ]
   },
   {
