changes zooming and added comments

--- a/by_Yann_Lecun/Week2/05_Regression.ipynb
+++ b/by_Yann_Lecun/Week2/05_Regression.ipynb
@@ -357,6 +357,7 @@
     "    # creating a sequential block for the model\n",
     "    model = nn.Sequential(\n",
     "            nn.Linear(D, H),\n",
+    "            # Now we will use ReLU for half of the networks and for the rest we will use Tanh\n",
     "            nn.ReLU() if mod < n_networks // 2 else nn.Tanh(),\n",
     "            nn.Linear(H, C)\n",
     "    )\n",
